# qe-demo

./: .gitignore  README.md  adverserial-models.docx  audit.docx  customer-master-key.txt  design-v1.docx  design-v2.docx  steps.org  storagecost.docx
java/: .env  pom.xml
java/src/main/java/com/mongodb/ps/qedemo/: AutoCSFLEClient.java  BenchClient.java  EncBench.java  Helpers.java  PlainClient.java  QEClient.java  RandomDocs.java  Utils.java
java/src/main/java/com/mongodb/ps/qedemo/model/: CSFLEEncFieldMap.java  FieldInfo.java  QEEncFieldMap.java  SchemaInfo.java
java/src/main/resources/: .env  firstnames
python/: customer-master-key.txt  enc_bench.py  pyproject.toml  queryable_encryption_tutorial.py  rand_docs.py
